# y2i

./: .gitignore  AGENTS.md  CLAUDE.md  DASHBOARD.md  Dockerfile  OMX_AGENT_NOTES.md  README.md  SESSION_HANDOFF.md  SESSION_HANDOFF.rootbak  channels.json  config.example.toml  config.toml  docker-compose.yml  pyproject.toml  requirements.txt
.codex/: instructions.md
.omc/: prd.json
dashboard/: app.py  auth.py  data_loader.py
output/: hsacademy_video_titles.json  hsacademy_video_titles.md  itgod_video_titles.json  itgod_video_titles.md  kimjakgatv_video_titles.json  kimjakgatv_video_titles.md  sampro_30d_20260323T094413Z.json  sampro_30d_20260323T094413Z.txt  sampro_pipeline_findings.md  sampro_video_titles.json  sampro_video_titles.md  sampro_video_titles_analysis.md  sosumonkey_video_titles.json  sosumonkey_video_titles.md  syuka_video_titles.json  syuka_video_titles.md
scripts/: analyze_title_inventory.py  build_itgod_recent5_results_from_captured_signals.py  collect_channel_titles.py  ensure_scheduler_daemon.sh  generate_dashboard.py  run_backtest_report.py  run_channel_30d_comparison.py  run_channel_30d_single.py  run_healthcheck.py  run_recent5_channel_analysis.py  run_sampro_integration_test.py  run_scheduler.py  signal_backtest.py
tests/: conftest.py  test_30d_dashboard.py  test_app_config.py  test_backtest_automation.py  test_channel_config.py  test_channel_quality.py  test_channel_runner.py  test_cli.py  test_cli_commands.py  test_cli_extended.py  test_combined_dashboard.py  test_comparison.py  test_daily_report.py  test_dashboard.py  test_dashboard_auth.py  test_discord_notifications.py  test_evaluation.py  test_expert_claims_llm.py  test_generate_dashboard.py  test_healthcheck.py  test_heuristic_dashboard.py  test_heuristic_pipeline.py  (+30 more)
(+45 files in other folders)
